// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb dropdown link from sitenav 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#link-dropdown"
        >
          
          
  Link Dropdown
  
        
        </a>
      </li>
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          
Link

        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb dropdown non-link from sitenav 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          
  Non-Link Dropdown
  
        
        </a>
      </li>
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          
Link

        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb empty breadcrumb 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
        
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb no sitenav 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
        
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb one link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#link"
        >
          
          link one
        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb one link from sitenav 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          
Link

        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb one non-link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          non-link one
        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb two link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#linkone"
        >
          
          link one
        
        </a>
      </li>
      <li
        aria-current="[object Object]"
        class="breadcrumb-item"
      >
        <a
          href="#linktwo"
        >
          
          link two
        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb two non-link 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="breadcrumb-divider"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="notlink"
      >
        
        [ 
      
      </li>
       
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          link one
        
        </a>
      </li>
      <li
        aria-current="[object Object]"
        class="breadcrumb-item notlink"
      >
        <a>
          
          link two
        
        </a>
      </li>
       
      <li
        class="notlink"
      >
        
         ]
      
      </li>
    </ol>
  </nav>
</div>
`;
